completamento manuale utente

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -500,87 +500,137 @@
 \section{Manuale dell'utente}
 \subsection*{Home}
 Sezione a cui si accede avviando l'applicativo. All'interno di questa è possibile ottenere una breve descrizione del progetto, visualizzare le specifiche e la repository GitHub, ed infine accedere alla relazione. Dalla navbar si può accedere alle schermate di \textit{Accedi} e \textit{Registrati}.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto4.png}
+\end{center}
 
 \subsection*{Registrazione}
 Sezione che permette di registrarsi alla piattaforma. Offre la possibilità di accedere alla schermata di \textit{Accedi} sia tramite la schermata principale che tramite navbar.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto5.png}
+\end{center}
 
 \subsection*{Accedi}
 Sezione che permette di autenticarsi alla piattaforma. Offre la possibilità di accedere alla schermata di \textit{Registrazione} sia tramite la schermata principale che tramite navbar.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto6.png}
+\end{center}
 
 \subsection*{Homepage storJ}
 Sezione a cui si accede in seguito all'autenticazione. Permette di visualizzare una breve descrizione delle azioni eseguibili. Attraverso la navbar si potranno raggiungere le schermate relative a \textit{Paga}, \textit{Crea}, ed infine effettuare il \textit{Logout}.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto7.png}
+\end{center}
 Nel caso in cui pagamento sia già stato effettuato, la voce \textit{Paga} sarà sostituita da \textit{Gioca}.
 
 \subsection*{Paga}
 Sezione che permette di effettuare il pagamento, in modo da poter sbloccare tutte le funzionalità della piattaforma. Sarà necessario inserire l'ammontare del pagamento, titolare e numero della carta, ed infine il relativo CVV. Potrebbe essere necessario effettuare più tentativi per far sì che vada a buon fine.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto8.png}
+\end{center}
 
 \subsection*{Storie}
 Sezione che consente la gestione delle storie. Permette di visualizzare le storie create in precedenza. Ad ognuna di esse sono assegnati due bottoni, necessari per la \textit{modifica} e l'\textit{eliminazione}. È presente una navbar contenente il collegamento alla schermata dedicata alla \textit{creazione} delle storie. Nel caso la storia sia stata salvata, la \textit{modifica} permetterà solo di cambiare i testi all'interno di questa.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto9.png}
+\end{center}
 
 \subsection*{Form creazione storia}
 Sezione che permette la \textit{creazione} di una storia. È necessario inserire il titolo e la categoria.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto10.png}
+\end{center}
 
 \subsection*{Scenari}
 Sezione che consente la \textit{gestione} di una storia specifica. Permette di visualizzare gli scenari appartenenti alla storia. Ad ognuno di essi sono associate le relative informazioni e due bottoni, utilizzati per l'accesso alla \textit{gestione} delle scelte e per la \textit{cancellazione} dello scenario. È presente una navbar che permette di salvare la storia e accedere alle sezioni relative alla \textit{creazione} di uno scenario, e infine alla \textit{gestione} degli oggetti.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto11.png}
+\end{center}
 Una volta effettuato il salvataggio della storia, sarà possibile solo modificare i testi relativi ad essa.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto12.png}
+\end{center}
 
 \subsection*{Form creazione scenario}
 Sezione che permette la \textit{creazione} di uno scenario. È necessario inserire i dati relativi ad esso, quindi il testo, la tipologia di scenario, la tipologia di risposta ed infine indicare la presenza o meno del drop di un oggetto.\vspace*{7pt}\\
 \textit{Nota bene}: è necessario aver già creato l'oggetto che si vuole far rilasciare dallo scenario.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto13.png}
+\end{center}
 
 \subsection*{Indovinello}
-Sezione che permette la \textit{gestione} della risposta ad un indovinello. È possibile visualizzare i dati relativi a quest'ultimo, quindi il testo, la risposta associata ed infine gli scenari destinazione in seguito alla risposta corretta piuttosto che alla risposta errata. 
-\textbf{METTERE FOTO}
+Sezione che permette la \textit{gestione} della risposta ad un indovinello. È possibile visualizzare i dati relativi a quest'ultimo, quindi il testo, la risposta associata ed infine gli scenari destinazione in seguito alla risposta corretta piuttosto che alla risposta errata.
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto14.png}
+\end{center}
 È possibile cancellare l'indovinello, se presente, e attraverso navbar ci sarà la possibilità di crearne uno nuovo.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto15.png}
+\end{center}
 
 \subsection*{Form creazione indovinello}
-Sezione che permette la \textit{creazione} della risposta ad un indovinello. È necessario inserire il testo del quesito, la risposta attesa ed infine gli scenari di destinazione in seguito alla risposta corretta piuttosto che alla risposta errata. 
-\textbf{METTERE FOTO}
+Sezione che permette la \textit{creazione} della risposta ad un indovinello. È necessario inserire il testo del quesito, la risposta attesa ed infine gli scenari di destinazione in seguito alla risposta corretta piuttosto che alla risposta errata.
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto16.png}
+\end{center}
 
 \subsection*{Scelta multipla}
 Sezione che permette la \textit{gestione} delle risposte ad una domanda a scelta multipla. È possibile visualizzare i dati relativi alle opzioni già presenti, quindi il testo, lo scenario successivo alla risposta, e la presenza o meno di un oggetto richiesto.\vspace*{7pt}\\
 \textit{Nota bene}: è necessario aver già creato l'oggetto richiesto.\vspace*{7pt}\\
 È possibile inoltre cancellare le opzioni, se presenti, e attraverso navbar ci sarà la possibilità di crearne nuove.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto17.png}
+\end{center}
 
 \subsection*{Form creazione multipla}
-Sezione che permette la \textit{creazione} della risposta ad una domanda a scelta multipla. È necessario inserire il testo del quesito, lo scenario successivo alla risposta, e la presenza o meno di un oggetto richiesto. 
-\textbf{METTERE FOTO}
+Sezione che permette la \textit{creazione} della risposta ad una domanda a scelta multipla. È necessario inserire il testo del quesito, lo scenario successivo alla risposta, e la presenza o meno di un oggetto richiesto.
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto18.png}
+\end{center}
+
 
 \subsection*{Oggetti}
 Sezione che permette la \textit{gestione} degli oggetti di una storia. È possibile visualizzare i dati relativi ad ognuno, quindi il titolo e la descrizione, ed un bottone che permette la cancellazione. Attraverso navbar ci sarà la possibilità di creare nuovi oggetti.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto19.png}
+\end{center}
+
 
 \subsection*{Form creazione oggetti}
 Sezione che permette la \textit{creazione} di un oggetto. È necessario inserire i dati relativi ad esso, quindi il titolo e la descrizione.
-\textbf{METTERE FOTO}
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto20.png}
+\end{center}
+
 
 \subsection*{Storie giocabili}
-Sezione che permette la \textit{selezione} della storia da giocare. È possibile visualizzare tutte le storie giocabili con le varie informazioni, permettendo la ricerca attraverso dei filtri. 
-\textbf{METTERE FOTO}\vspace*{7pt}\\
+Sezione che permette la \textit{selezione} della storia da giocare. È possibile visualizzare tutte le storie giocabili con le varie informazioni, permettendo la ricerca attraverso dei filtri.
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto21.png}
+\end{center}\vspace*{7pt}\\
 Per ogni storia presente ci sarà la possibilità di \textit{avviare} la partita, o in alternativa di \textit{visualizzare} l'\textit{anteprima} di essa.
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto22.png}
+\end{center}
 
 \subsection*{Gioca}
 Sezione in cui avviene lo \textit{svolgimento} della partita. All'interno della schermata sarà presente il testo dello scenario ed in base alla tipologia della domanda verranno visualizzati i bottoni contenenti le opzioni di risposta piuttosto che l'area testuale per inserire la risposta all'indovinello.
-\textbf{METTERE FOTO}\vspace*{7pt}\\
-\textbf{METTERE FOTO}\vspace*{7pt}\\
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto23.png}
+\end{center}\vspace*{7pt}\\
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto24.png}
+\end{center}\vspace*{7pt}\\
 Attraverso la barra di navigazione sarà sempre possibile consultare l'\textit{inventario} della partita.
-\textbf{METTERE FOTO}\vspace*{7pt}\\
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto25.png}
+\end{center}\vspace*{7pt}\\
 
 \subsection*{Partite giocate}
 Sezione in cui sono presenti le partite avviate dall'utente. Per ogni partita sarà possibile riprendere la storia dallo scenario in cui era stata interrotta oppure rimuovere i dati di gioco relativi ad essa.
-\textbf{METTERE FOTO}\vspace*{7pt}\\
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{foto26.png}
+\end{center}\vspace*{7pt}\\
 
 \clearpage
 \section*{Manuale dello sviluppatore}
