--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -63,7 +63,7 @@
 \vspace{50px}
 
 \begin{center}
-    {\LARGE{{\bf Piattaforma ESQL}}}\\
+    {\LARGE{{\bf storJ}}}\
 \end{center}
 
 \vspace{115px}
@@ -76,8 +76,8 @@
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.4\textwidth}\raggedleft
-    {\fontsize{12}{13}{DOCUMENTAZIONE SVOLTA DA:}\\
-\fontsize{12}{13}{\it Canghiari Matteo \\ De Rosa Davide \\ Ghazanfar Tabish \\ Nadifi Ossama}}
+    {\fontsize{12}{13}{DOCUMENTAZIONE SVOLTA DA:}\
+\fontsize{12}{13}{\it Canghiari Matteo, 1032059 \ De Rosa Davide, 1054948 \ Ghazanfar Tabish, 1045078 \ Nadifi Ossama, 1021258}}
 \end{minipage}
 \begin{minipage}[t]{0.04\textwidth}
 ~
@@ -97,7 +97,9 @@
 
 \subsection{Diagramma dei casi d'uso}
 \large
-\textbf{METTERE DIAGRAMMA}\vspace*{7pt}\\
+\begin{center}
+    \includegraphics[width=0.7\textwidth]{foto2.png}
+\end{center}
 
 \newpage
 \textbf{Registrazione}
@@ -495,6 +497,9 @@
 
 \newpage
 \subsection{Burndown chart}
+\begin{center}
+    \includegraphics[width=0.7\textwidth]{foto3.png}
+\end{center}
 
 \newpage
 \section{Manuale dell'utente}
@@ -588,13 +593,11 @@ Sezione che permette la \textit{creazione} della risposta ad una domanda a scelt
     \includegraphics[width=0.8\textwidth]{foto18.png}
 \end{center}
 
-
 \subsection*{Oggetti}
 Sezione che permette la \textit{gestione} degli oggetti di una storia. È possibile visualizzare i dati relativi ad ognuno, quindi il titolo e la descrizione, ed un bottone che permette la cancellazione. Attraverso navbar ci sarà la possibilità di creare nuovi oggetti.
 \begin{center}
     \includegraphics[width=0.8\textwidth]{foto19.png}
 \end{center}
-
 
 \subsection*{Form creazione oggetti}
 Sezione che permette la \textit{creazione} di un oggetto. È necessario inserire i dati relativi ad esso, quindi il titolo e la descrizione.
@@ -602,12 +605,11 @@ Sezione che permette la \textit{creazione} di un oggetto. È necessario inserire
     \includegraphics[width=0.8\textwidth]{foto20.png}
 \end{center}
 
-
 \subsection*{Storie giocabili}
 Sezione che permette la \textit{selezione} della storia da giocare. È possibile visualizzare tutte le storie giocabili con le varie informazioni, permettendo la ricerca attraverso dei filtri.
 \begin{center}
     \includegraphics[width=0.8\textwidth]{foto21.png}
-\end{center}\vspace*{7pt}\\
+\end{center}
 Per ogni storia presente ci sarà la possibilità di \textit{avviare} la partita, o in alternativa di \textit{visualizzare} l'\textit{anteprima} di essa.
 \begin{center}
     \includegraphics[width=0.8\textwidth]{foto22.png}
@@ -617,20 +619,20 @@ Per ogni storia presente ci sarà la possibilità di \textit{avviare} la partita
 Sezione in cui avviene lo \textit{svolgimento} della partita. All'interno della schermata sarà presente il testo dello scenario ed in base alla tipologia della domanda verranno visualizzati i bottoni contenenti le opzioni di risposta piuttosto che l'area testuale per inserire la risposta all'indovinello.
 \begin{center}
     \includegraphics[width=0.8\textwidth]{foto23.png}
-\end{center}\vspace*{7pt}\\
+\end{center}
 \begin{center}
     \includegraphics[width=0.8\textwidth]{foto24.png}
-\end{center}\vspace*{7pt}\\
+\end{center}
 Attraverso la barra di navigazione sarà sempre possibile consultare l'\textit{inventario} della partita.
 \begin{center}
     \includegraphics[width=0.8\textwidth]{foto25.png}
-\end{center}\vspace*{7pt}\\
+\end{center}
 
 \subsection*{Partite giocate}
 Sezione in cui sono presenti le partite avviate dall'utente. Per ogni partita sarà possibile riprendere la storia dallo scenario in cui era stata interrotta oppure rimuovere i dati di gioco relativi ad essa.
 \begin{center}
     \includegraphics[width=0.8\textwidth]{foto26.png}
-\end{center}\vspace*{7pt}\\
+\end{center}
 
 \clearpage
 \section*{Manuale dello sviluppatore}
@@ -940,6 +942,7 @@ Soffermandosi nuovamente sui differenti elementi, si osserva:
 \end{itemize}
 Le seguenti \textit{pipeline} permettono il deploy su una \textit{macchina virtuale} dedicata all'applicativo di backend, con database e servizio di pagamento annessi.
 
+\clearpage
 \section{Dario del progetto}
 
 \subsection{Sprint 0}
@@ -954,7 +957,7 @@ Ruoli:
     \item Product Owner: Matteo Canghiari
     \item Scrum Master: Ossama Nadifi
 \end{itemize}
-Nel primo periodo di sviluppo sono state realizzate le funzioni base del'applicazione. Il focus è stato sulla realizzazione delle funzioni di autenticazione e pagamento. Suddividendole in business logic e interfaccia, il team di sviluppo ha completato le task osservabili sulla tabella di fine sprint.\vspace*{7pt}\\
+Nel primo periodo di sviluppo sono state realizzate le funzioni base del'applicazione. Il focus è stato sulla realizzazione delle funzioni di autenticazione e pagamento. Suddividendole in business logic e interfaccia, il team di sviluppo ha completato le task osservabili sulla tabella di fine sprint.
 
 \begin{table}[h]
     \centering
