--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -77,7 +77,7 @@
 \hfill
 \begin{minipage}[t]{0.4\textwidth}\raggedleft
     {\fontsize{12}{13}{DOCUMENTAZIONE SVOLTA DA:}\
-\fontsize{12}{13}{\it Canghiari Matteo, 1032059 \ De Rosa Davide, 1054948 \ Ghazanfar Tabish, 1045078 \ Nadifi Ossama, 1021258}}
+\fontsize{12}{13}{\it Canghiari Matteo, 1032059 \\ De Rosa Davide, 1054948 \\ Ghazanfar Tabish, 1045078 \\ Nadifi Ossama, 1021258}}
 \end{minipage}
 \begin{minipage}[t]{0.04\textwidth}
 ~
@@ -93,12 +93,13 @@
 \section{Design Model}
 
 \subsection{Modello di dominio} 
-\large
+\begin{center}
+    \includegraphics[width=0.9\textwidth]{foto1.png}
+\end{center}
 
 \subsection{Diagramma dei casi d'uso}
-\large
 \begin{center}
-    \includegraphics[width=0.7\textwidth]{foto2.png}
+    \includegraphics[width=0.8\textwidth]{foto2.png}
 \end{center}
 
 \newpage
@@ -143,19 +144,19 @@
         \begin{enumerate}
             \item Utente inserisce e invia i dati
             \item Sistema acquisisce e confronta con i dati salvati
-            \item Sistema nega l'accesso e invia esito positivo
+            \item Sistema consente l'accesso e invia esito positivo
             \item Utente visualizza esito positivo
         \end{enumerate}
     \item Alternative sequence:
         \begin{enumerate}
             \item Utente inserisce e invia i dati non idonei
             \item Sistema acquisisce e individua un errore
-            \item Sistema invia esito negativo
+            \item Sistema nega l'accesso e invia esito negativo
             \item Utente visualizza esito negativo
         \end{enumerate}
     \item Postcondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piatttaforma
+            \item Utente autenticato nella piattaforma
         \end{itemize}
 \end{itemize}
 \textbf{Logout}
@@ -165,7 +166,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
         \end{itemize}
     \item Main sequence: 
         \begin{enumerate}
@@ -188,7 +189,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
             \item Utente non abbia effettuato alcun pagamento
         \end{itemize}
     \item Main sequence: 
@@ -210,6 +211,7 @@
             \item Sistema salva lo stato Utente di pagamento
         \end{itemize}
 \end{itemize}
+\newpage
 \textbf{Creazione scenario}
 \begin{itemize}[label = { }]
     \itemsep0px
@@ -217,7 +219,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
         \end{itemize}
     \item Main sequence: 
         \begin{enumerate}
@@ -245,7 +247,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
             \item Utente abbia creato componenti Scenario
         \end{itemize}
     \item Main sequence: 
@@ -274,7 +276,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
             \item Utente abbia creato componenti Scenario
             \item Utente abbia creato componenti Scelta
         \end{itemize}
@@ -307,7 +309,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
         \end{itemize}
     \item Main sequence: 
         \begin{enumerate}
@@ -330,7 +332,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
         \end{itemize}
     \item Main sequence: 
         \begin{enumerate}
@@ -357,7 +359,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
         \end{itemize}
     \item Main sequence: 
         \begin{enumerate}
@@ -368,7 +370,7 @@
         \begin{enumerate}
             \item Utente richiede modifica testuale della Scelta
             \item Sistema riceve richiesta
-            \item Utente inserisci i dati sostitutivi
+            \item Utente inserisce i dati sostitutivi
             \item Sistema acquisisce modifiche
         \end{enumerate}
     \item Postcondizioni: 
@@ -384,7 +386,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
             \item Utente abbia effettuato un pagamento
             \item Storia deve essere giocabile
         \end{itemize}
@@ -416,13 +418,13 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
             \item Utente abbia effettuato un pagamento
             \item Storia deve essere giocabile
         \end{itemize}
     \item Main sequence: 
         \begin{enumerate}
-            \item Utente richiede rimozione Partita inerente alla Storia
+            \item Utente richiede rimozione Partita
             \item Sistema riceve richiesta
         \end{enumerate}
     \item Alternative sequence:
@@ -446,7 +448,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
         \end{itemize}
     \item Main sequence: 
         \begin{enumerate}
@@ -474,7 +476,7 @@
     \item Attori: Utente
     \item Precondizioni: 
         \begin{itemize}[label = {-}]
-            \item Utente autenticato dalla piattaforma
+            \item Utente autenticato nella piattaforma
         \end{itemize}
     \item Main sequence: 
         \begin{enumerate}
@@ -495,10 +497,10 @@
         \end{itemize}
 \end{itemize}
 
-\newpage
 \subsection{Burndown chart}
+\large
 \begin{center}
-    \includegraphics[width=0.7\textwidth]{foto3.png}
+    \includegraphics[width=0.8\textwidth]{foto3.png}
 \end{center}
 
 \newpage
